// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'acala' -> 'assetHubPolkadot' WBTC > balance on from chain 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'acala' -> 'assetHubPolkadot' WBTC > balance on to chain 1`] = `
{
  "balance": 1000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'acala' -> 'assetHubPolkadot' WBTC > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 16010000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x0000",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 16000000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x0000",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'acala' -> 'assetHubPolkadot' WBTC > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": false,
      "weightUsed": {
        "proofSize": "(rounded 1500)",
        "refTime": "(rounded 29000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'acala' -> 'assetHubPolkadot' WBTC > tx events 1`] = `[]`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'assetHubPolkadot' -> 'acala' WBTC > balance on from chain 1`] = `
{
  "balance": 100000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'assetHubPolkadot' -> 'acala' WBTC > balance on to chain 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'assetHubPolkadot' -> 'acala' WBTC > from chain hrmp messages 1`] = `[]`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'assetHubPolkadot' -> 'acala' WBTC > to chain xcm events 1`] = `[]`;

exports[`'assetHubPolkadot' <-> 'acala' xcm transfer 'WBTC' > 'assetHubPolkadot' -> 'acala' WBTC > tx events 1`] = `[]`;
